# mod-language

./: .gitignore  Cargo.toml  readme.md
driver/: main.rs
libs/: main.rs
libs/ansi/: Cargo.toml  ansi.rs
libs/bytecode/: Cargo.toml
libs/bytecode/src/: lib.rs
libs/codegen/: Cargo.toml
libs/codegen/src/: lib.rs
libs/common/: Cargo.toml
libs/common/src/: lib.rs
libs/declaration_builder/: Cargo.toml
libs/declaration_builder/src/: lib.rs
libs/frontend/: Cargo.toml  ctx.rs  frontend.rs  source.rs  token.rs
libs/frontend/analyzer/passes/: bind_top_level.rs  check_global_initializers.rs  eval_helpers.rs  mod.rs  resolve_pseudonyms.rs  support_structures.rs  ty_helpers.rs
libs/frontend/lexer/: mod.rs
libs/frontend/parser/: block.rs  mod.rs  sync.rs  type_expression.rs
libs/frontend/src/: ast.rs  ir.rs  session.rs
libs/frontend/src/analyzer/: mod.rs
libs/frontend/src/analyzer/passes/: generate_bodies.rs  type_link_top_level.rs
libs/frontend/src/lexer/: lexlets.rs
libs/frontend/src/parser/: block.rs  expression.rs  item.rs  path.rs  statement.rs
libs/rc/: Cargo.toml
libs/rc/src/: context.rs  generator.rs  lib.rs  llvm_extras.rs  module_loader.rs  utils.rs
libs/utils/: Cargo.toml
libs/utils/src/: into_decimal.rs  lib.rs  temp.rs  try_extended.rs
src/: main.rs
src/lib/: ansi.rs  ast.rs  bc.rs  bytecode.rs  codegen.rs  common.rs  ctx.rs  decl_builder.rs  extras.rs  ir.rs  lexer.rs  lib.rs  macros.rs  session.rs  source.rs  token.rs
src/lib/analyzer/: analysis.rs  items.rs  mod.rs  modules.rs  namespaces.rs  passes.rs  types.rs  values.rs
src/lib/analyzer/passes/: alias.rs  bind_top_level.rs  check_global_initializers.rs  eval_helpers.rs  generate_bodies.rs  mod.rs  resolve_aliases.rs  resolve_pseudonyms.rs  support.rs  support_structures.rs  ty_helpers.rs  type_link_top_level.rs
src/lib/codegen/: mod.rs
src/lib/lexer/: lexlets.rs  mod.rs
src/lib/parser/: block.rs  expression.rs  item.rs  mod.rs  path.rs  statement.rs  sync.rs  sync_predicate.rs  type_expression.rs
src/lib/util/: char_print_wrapper.rs  deref_wrapper.rs  mod.rs
test_scripts/: LibraryTest.mi  LibraryTest2.mi  block.ms  body_analysis.ms  compilation.ms  declaration.mi  expression.ms  factorial.ms  fibonacci.ms  global_analysis.ms  import.ms  import_codegen.ms  item.ms  item_analysis.ms  min.ms  module.ms  namespace.ms  odd.ms  ptr_lvalue_analysis.ms  subnamespace_x.ms  type_expression.ms
test_scripts/modules/: Circle.mi  CodegenTests.mi  Declaration.mi  GlobalDef.mi
test_scripts/subnamespace_y/: ns.ms
