[package]
name = "mod_language"
description = "WIP wasm scripting language"
version = "0.1.1"
authors = ["noxabellus <noxabellus@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/noxabellus/mod-language"
homepage = "https://github.com/noxabellus/mod-language"
readme = "readme.md"

[lib]
name = "mod_language"
path = "src/lib/lib.rs"

[[bin]]
name = "mod_language"
path = "src/main.rs"

[dependencies]
mod_utilities = "0.1.0"