[package]
name = "mod_language"
description = "WIP wasm scripting language"
version = "0.1.23"
authors = ["noxabellus <noxabellus@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/noxabellus/mod-language"
homepage = "https://github.com/noxabellus/mod-language"
readme = "readme.md"

[lib]
name = "mod_language"
path = "libs/main.rs"

[[bin]]
name = "mod_language"
path = "driver/main.rs"

[dependencies]
mod_ansi = { path = "libs/ansi", version = "0.1.23" }
mod_utils = { path = "libs/utils", version = "0.1.23" }
mod_common = { path = "libs/common", version = "0.1.23" }
mod_frontend = { path = "libs/frontend", version = "0.1.23" }
mod_declaration_builder = { path = "libs/declaration_builder", version = "0.1.23" }
mod_bytecode = { path = "libs/bytecode", version = "0.1.23" }
mod_codegen = { path = "libs/codegen", version = "0.1.23" }
mod_rc = { path = "libs/rc", version = "0.1.23" }