[package]
name = "mod_bytecode"
description = "The bytecode format used by mod_language"
version = "0.1.23"
authors = ["noxabellus <noxabellus@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/noxabellus/mod-language"
homepage = "https://github.com/noxabellus/mod-language"
readme = "readme.md"

[lib]
name = "mod_bytecode"
path = "bytecode.rs"

[dependencies]
mod_common = { path = "../common", version = "0.1.23" }