[package]
name = "mod_codegen"
version = "0.1.23"
authors = ["noxabellus <noxabellus@gmail.com>"]
edition = "2018"

[dependencies]
mod_bytecode = { path = "../bytecode", version = "0.1.23" }
mod_common = { path = "../common", version = "0.1.23" }
mod_frontend = { path = "../frontend", version = "0.1.23" }