[package]
name = "mod_common"
description = "Implementation details common to multiple mod_language components"
version = "0.1.23"
authors = ["noxabellus <noxabellus@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/noxabellus/mod-language"
homepage = "https://github.com/noxabellus/mod-language"
readme = "readme.md"

[lib]
name = "mod_common"
path = "common.rs"