[package]
name = "mod_frontend"
version = "0.1.23"
authors = ["noxabellus <noxabellus@gmail.com>"]
edition = "2018"

[dependencies]
mod_utils = { path = "../utils", version = "0.1.23" }
mod_common = { path = "../common", version = "0.1.23" }
mod_ansi = { path = "../ansi", version = "0.1.23" }

[dependencies.backtrace]
optional = true
version = "0.3"