[package]
name = "mod_utils"
description = "A collection of miscellaneous data structures, traits, and functions"
version = "0.1.23"
authors = ["noxabellus <noxabellus@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/noxabellus/mod-language"
homepage = "https://github.com/noxabellus/mod-language"
readme = "readme.md"

[lib]
name = "mod_utils"
path = "utils.rs"